--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -273,6 +273,8 @@ ul {
       align-content: center;
   margin: 0.5em;
   padding: 0.5em;
+  max-width: 700px;
+  margin: 0 auto;
 }
 
 .social-media li {
